# books-api

./: Makefile  README.md  lambda_function.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: deploy.yml
templates/: all_books.html  base.html  index.html
test/: test_book.py
